c/examples/writing-a-c-compiler-tests/tests/chapter_17/invalid_types/void/assign_void_rval.c
/* can't convert void to another type by assignment */
int main(void) {
  int a = 10;
  a = (void)20;
  return 0;
}